name:                 minecraft-world
version:              0.1.0.0
synopsis:             A wrapper for Minecraft's world format
description:          Please see README.md
homepage:             https://github.com/oldmanmike/hs-minecraft-world
bug-reports:          https://github.com/oldmanmike/hs-minecraft-world/issues
license:              BSD3
license-file:         LICENSE
author:               Michael Carpenter
maintainer:           Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:            Copyright (C) 2016 Michael Carpenter
category:             Data,Game
build-type:           Simple
extra-source-files:   README.md, LICENSE
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    Data.Minecraft.World
  build-depends:      base >= 4.7 && < 5,
                      bytestring,
                      nbt 
  default-language:   Haskell2010

test-suite hs-minecraft-world-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base,
                      minecraft-world
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

benchmark minecraft-world-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            BenchmarkSuite.hs
  build-depends:      base,
                      criterion,
                      minecraft-world
  ghc-options:        -Wall -O2
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/hs-minecraft-world
